--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tests/isa"]
-	path = tests/isa
-	url = https://github.com/magicpan-risc-v/riscv-tests
+	path = tests/rv_test
+	url = https://github.com/magicpan-risc-v/riscv-tests/tree/no_csr
