--- a/monitor/Makefile
+++ b/monitor/Makefile
@@ -5,8 +5,8 @@ OBJDUMP := $(ARCH_PREF)objdump
 OBJCOPY := $(ARCH_PREF)objcopy
 MARCH := rv64i
 ABI := lp64
-#CFLAGS := -DWITH_CSR -DWITH_INTERRUPT -DWITH_IRQ -DWITH_ECALL
-CFLAGS := 
+CFLAGS := -DWITH_CSR -DWITH_INTERRUPT -DWITH_IRQ -DWITH_ECALL
+#CFLAGS := 
 # START_ADR := 0xC0020000
 # VA_BASE := 0xC0000000
 START_ADR := 0x0
