--- a/monitor/Makefile
+++ b/monitor/Makefile
@@ -7,10 +7,10 @@ MARCH := rv64i
 ABI := lp64
 CFLAGS := -DWITH_CSR -DWITH_INTERRUPT -DWITH_IRQ -DWITH_ECALL
 #CFLAGS := 
-# START_ADR := 0xC0020000
-# VA_BASE := 0xC0000000
-START_ADR := 0x0
-VA_BASE := 0x0
+ START_ADR := 0xC0020000
+ VA_BASE := 0xC0000000
+#START_ADR := 0x0
+#VA_BASE := 0x0
 
 all: disas.S monitor.bin
 
