--- a/monitor/Makefile
+++ b/monitor/Makefile
@@ -7,8 +7,8 @@ MARCH := rv64i
 ABI := lp64
 CFLAGS := -DWITH_CSR -DWITH_INTERRUPT -DWITH_IRQ -DWITH_ECALL
 #CFLAGS := 
- START_ADR := 0xC0020000
- VA_BASE := 0xC0000000
+ START_ADR := 0x80020000
+ VA_BASE := 0x80000000
 #START_ADR := 0x0
 #VA_BASE := 0x0
 
